# cli-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/data_fetch_cli/: __init__.py  __main__.py  cli.py  downloader.py  logger.py  validator.py
tests/: test_cli.py  test_downloader.py  test_validator.py
