[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-fetch-cli"
version = "0.1.0"
description = "A simple CLI tool to fetch and validate user data from an HTTP endpoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "python-json-logger>=2.0.7",
]

[project.scripts]
data-fetch = "data_fetch_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
